chore: (portfolio) style features in projects

--- a/apps/portfolio/src/components/links/footerLinks.astro
+++ b/apps/portfolio/src/components/links/footerLinks.astro
@@ -1,13 +1,13 @@
 <section>
     <ul class="grid place-items-center md:flex md:items-center md:justify-center">
         <li class="px-5">
-            <a href="/about" class="text-xl">about me</a>
+            <a href="/about/" class="text-xl">about me</a>
         </li>
         <li class="px-5">
-            <a href="/resume" class="text-xl">resume</a>
+            <a href="/resume/" class="text-xl">resume</a>
         </li>
         <li class="px-5">
-            <a href="/projects" class="text-xl">projects</a>
+            <a href="/projects/" class="text-xl">projects</a>
         </li>
     </ul>
 </section>
