--- a/apps/portfolio/src/pages/projects/diety/index.astro
+++ b/apps/portfolio/src/pages/projects/diety/index.astro
@@ -1,7 +1,7 @@
 ---
 import ProjectsLayout from "../../../layouts/projects.astro";
 import Overview from "../../../components/projects/diety/overview.md"
-import Features from "../../../components/projects/diety/features.md"
+import Features from "../../../components/projects/diety/features.astro"
 ---
 
 
