--- a/apps/portfolio/src/pages/projects/index.astro
+++ b/apps/portfolio/src/pages/projects/index.astro
@@ -15,7 +15,7 @@ import Main from "../../layouts/main.astro";
                         <a class="underline" href="/projects/db">lexiDB</a>
                     </div>
                     <div class="grid place-items-center">
-                        <p>An in-memory data structure database written in C</p>
+                        <p>An in-memory data structure database</p>
                     </div>
                 </li>
                 <li class="bg-neutral-100 rounded-md p-2">
