--- a/apps/portfolio/src/pages/projects/news-app/index.astro
+++ b/apps/portfolio/src/pages/projects/news-app/index.astro
@@ -1,7 +1,7 @@
 ---
 import ProjectLayout from "../../../layouts/projects.astro";
 import Overview from "../../../components/projects/news/overview.md";
-import Features from "../../../components/projects/news/features.md";
+import Features from "../../../components/projects/news/features.astro";
 ---
 
 <ProjectLayout>
