--- a/apps/portfolio/src/pages/projects/vstr/index.astro
+++ b/apps/portfolio/src/pages/projects/vstr/index.astro
@@ -1,7 +1,7 @@
 ---
 import ProjectsLayout from "../../../layouts/projects.astro";
 import Overview from "../../../components/projects/vstr/overview.md"
-import Features from "../../../components/projects/vstr/features.md"
+import Features from "../../../components/projects/vstr/features.astro"
 ---
 
 
