--- a/apps/portfolio/src/pages/projects/interpreter/index.astro
+++ b/apps/portfolio/src/pages/projects/interpreter/index.astro
@@ -1,7 +1,8 @@
 ---
 import ProjectsLayout from "../../../layouts/projects.astro";
 import Overview from "../../../components/projects/interpreter/overview.md";
-import Features from "../../../components/projects/interpreter/features.md";
+import Features from "../../../components/projects/interpreter/features.astro";
+import Takeaway from "../../../components/projects/interpreter/takeaway.md";
 ---
 
 
@@ -14,6 +15,9 @@ import Features from "../../../components/projects/interpreter/features.md";
     </section>
     <section class="max-w-[80ch] text-lg">
         <Features />
+    </section>
+    <section class="max-w-[80ch] text-lg">
+        <Takeaway />
     </section>
 </ProjectsLayout>
 
