chore: (portfolio) style footer better

--- a/apps/portfolio/src/components/contact/index.astro
+++ b/apps/portfolio/src/components/contact/index.astro
@@ -1,4 +1,4 @@
-<section class="flex">
+<section class="grid place-items-center sm:flex">
     <div class="px-5">
         <a href="mailto: ronnebaumvince@gmail.com" class="text-xl underline">email</a>
     </div>
