--- a/apps/portfolio/src/components/footer/index.astro
+++ b/apps/portfolio/src/components/footer/index.astro
@@ -4,12 +4,12 @@ import FooterLinks from "../links/footerLinks.astro";
 ---
 
 
-<footer class="w-full bg-neutral-200 grid grid-cols-2 place-items-center py-5">
-    <section class="grid place-items-center">
+<footer class="w-full bg-neutral-200 flex justify-center py-5 gap-14">
+    <section class="flex flex-col items-center h-full">
         <h2 class="text-2xl">Site Links</h2>
         <FooterLinks />
     </section>
-    <section class="grid place-items-center">
+    <section class="flex flex-col items-center h-full">
         <h2 class="text-2xl">Contact</h2>
         <Contact />
     </section>
