--- a/apps/portfolio/src/pages/index.astro
+++ b/apps/portfolio/src/pages/index.astro
@@ -4,11 +4,11 @@ import Main from "../layouts/main.astro";
 
 <Main>
     <article class="grid place-items-center py-20">
-        <section class="flex flex-col items-center bg-neutral-100 max-w-[80ch]">
+        <section class="flex flex-col items-center bg-neutral-100 max-w-[80ch] rounded-md">
             <section class="py-3">
                 <h2 class="text-2xl">Hi, I'm Vince</h2>
             </section>
-            <section class="text-xl flex flex-col gap-2 p-5 rounded-md">
+            <section class="text-xl flex flex-col gap-2 p-5">
                 <section>
                     <p>I enjoy creating software that requires performance and robustness</p>
                 </section>
