--- a/apps/portfolio/src/pages/projects/cpu-monitor/index.astro
+++ b/apps/portfolio/src/pages/projects/cpu-monitor/index.astro
@@ -2,6 +2,7 @@
 import ProjectsLayout from "../../../layouts/projects.astro";
 import Overview from "../../../components/projects/cpu/overview.md";
 import Features from "../../../components/projects/cpu/features.astro";
+import Takeaway from "../../../components/projects/cpu/takeaway.md"
 ---
 
 
@@ -14,6 +15,9 @@ import Features from "../../../components/projects/cpu/features.astro";
     </section>
     <section class="max-w-[80ch] text-lg">
         <Features />
+    </section>
+    <section class="max-w-[80ch] text-lg">
+        <Takeaway />
     </section>
 </ProjectsLayout>
 
