--- a/apps/portfolio/src/components/projects/interpreter/features.astro
+++ b/apps/portfolio/src/components/projects/interpreter/features.astro
@@ -31,11 +31,22 @@
         <h4>Built-in functions</h4>
         <ul class="list-disc pl-5">
             <li>
-                <p>Logging</p>
+                <p><code>print</code> - logging</p>
             </li>
             <li>
-                <p>Size functions(length of strings, length of arrays,
-                number of entries in maps)</p>
+                <p><code>len</code> - get the length of a string or an array</p>
+            </li>
+            <li>
+                <p><code>first</code> - get the first element of an array</p>
+            </li>
+            <li>
+                <p><code>last</code> - get the last element of an array</p>
+            </li>
+            <li>
+                <p><code>rest</code> - get all but the first elements of an array</p>
+            </li>
+            <li>
+                <p><code>push</code> - append an element to an array</p>
             </li>
         </ul>
     </li>
@@ -44,9 +55,6 @@
     </li>
     <li>
         <h4>Closures</h4>
-    </li>
-    <li>
-        <h4>Garbage collection</h4>
     </li>
     <li>
         <h4>A REPL</h4>
