--- a/apps/portfolio/src/components/projects/diety/features.astro
+++ b/apps/portfolio/src/components/projects/diety/features.astro
@@ -2,13 +2,13 @@
 
 <ul class="list-disc pl-5">
     <li>
-        <h4>Creates C binary and library projects</h4>
+        <h4>Creates C and C++ binary and library projects</h4>
         <ul class="list-disc pl-5">
             <li>
                 <p>Configure cmake to build the project in debug mode and release mode</p>
             </li>
             <li>
-                <p>Set up test suites for the project</p>
+                <p>Set up test suites for the project using libcheck for C and googletest for C++</p>
             </li>
         </ul>
     </li>
