feat: (portfolio) vstr takeaway

--- a/apps/portfolio/src/components/projects/vstr/features.astro
+++ b/apps/portfolio/src/components/projects/vstr/features.astro
@@ -19,7 +19,8 @@
         <h4>Rather than returning a structure to the user, a pointer to the
         string is returned</h4>
         <ul class="list-disc pl-5">
-            <li>Allows trivial interaction with the C standard library</li>
+            <li>Allows trivial interaction with the C standard library when
+            not using binary data in the string</li>
         </ul>
     </li>
     <li>
