--- a/apps/portfolio/src/pages/projects/vstr/index.astro
+++ b/apps/portfolio/src/pages/projects/vstr/index.astro
@@ -2,6 +2,7 @@
 import ProjectsLayout from "../../../layouts/projects.astro";
 import Overview from "../../../components/projects/vstr/overview.md"
 import Features from "../../../components/projects/vstr/features.astro"
+import Takeaway from "../../../components/projects/vstr/takeaway.md";
 ---
 
 
@@ -14,6 +15,9 @@ import Features from "../../../components/projects/vstr/features.astro"
     </section>
     <section class="max-w-[80ch] text-lg">
         <Features />
+    </section>
+    <section class="max-w-[80ch] text-lg">
+        <Takeaway />
     </section>
 </ProjectsLayout>
 
