feat: (portfolio) style links

--- a/apps/portfolio/src/layouts/projects.astro
+++ b/apps/portfolio/src/layouts/projects.astro
@@ -26,6 +26,10 @@ pre {
 :not(li) > p {
     text-indent: 20px !important;
 }
+p > a {
+    color: blue;
+    text-decoration: underline;
+}
 </style>
 
 <Main>
