--- a/apps/stock/public/views/signin.html
+++ b/apps/stock/public/views/signin.html
@@ -15,7 +15,7 @@
                 <h1 class="text-2xl">Sign in</h1>
             </section>
             <section>
-                <form hx-post="/auth/email" class="flex flex-col gap-4">
+                <form action="/auth/email" method="post" class="flex flex-col gap-4">
                     <section class="flex flex-col gap-1">
                         <label class="text-xl" for="email">email:</label>
                         <input
