fix: logout button style

--- a/apps/stock/public/views/me.html
+++ b/apps/stock/public/views/me.html
@@ -21,12 +21,12 @@
                     <button hx-post="/logout"
                         hx-push-url="true"
                         hx-target="#top"
-                        >
-                        <p class="bg-blue-600 text-white text-xl
+                        class="bg-blue-600 text-white text-xl
                         px-2 py-1 rounded-md
                         transtion duration-300 ease-in-out
-                        hover:bg-blue-800">log out</p>
-                    </a>
+                        hover:bg-blue-800">
+                        log out
+                    </button>
                 </li>
             </ul>
         </section>
