--- a/apps/stock/public/views/search.html
+++ b/apps/stock/public/views/search.html
@@ -34,7 +34,8 @@
     <main class="flex justify-center">
         <article class="w-full">
             <section class="grid place-items-center">
-                <form hx-post="/search" hx-target="#search" class="flex mt-6 gap-2">
+                <form hx-post="/search" hx-target="#search"
+                    class="flex mt-6 gap-2">
                     <section>
                         <label class="text-xl px-2" for="stock">enter name or symbol:</label>
                         <input type="text" name="stock" id="stock" placeholder="aapl"
