feat: (stock) style income statement

--- a/apps/stock/public/views/stock.html
+++ b/apps/stock/public/views/stock.html
@@ -104,12 +104,12 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div class="flex flex-col items-center">
                     <div>
-                        <h3>Income Statements</h3>
+                        <h3 class="text-lg">Income Statements</h3>
                     </div>
                     <div>
-                        <div class="flex gap-2">
+                        <div class="flex gap-2 text-lg">
                             <div>
                                 <h3>Year</h3>
                                 <div>
