feat: (stock) loading spinner

--- a/apps/stock/app/styles/index.css
+++ b/apps/stock/app/styles/index.css
@@ -2,3 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+rgb(59, 130, 246)
+
+.lds-dual-ring {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+}
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid rgb(59, 130, 246);
+    border-color: rgb(59, 130, 246) transparent rgb(59, 130, 246) transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
