--- a/apps/stock/public/views/initsearch.html
+++ b/apps/stock/public/views/initsearch.html
@@ -1,1 +1,9 @@
-<div hx-get='{{ index . "Search" }}' hx-trigger="load" hx-push-url="true" hx-target="#top"></div>
+<div
+    hx-get='{{ index . "Search" }}'
+    hx-trigger="load"
+    hx-push-url="true"
+    hx-target="#top"
+    class="flex items-center justify-center"
+>
+    <div class="lds-dual-ring"></div>
+</div>
