--- a/apps/portfolio/src/pages/projects/stock-app/index.astro
+++ b/apps/portfolio/src/pages/projects/stock-app/index.astro
@@ -1,7 +1,8 @@
 ---
 import ProjectLayout from "../../../layouts/projects.astro";
 import Overview from "../../../components/projects/stock/overview.md";
-import Features from "../../../components/projects/stock/features.md";
+import Features from "../../../components/projects/stock/features.astro";
+import Takeaway from "../../../components/projects/stock/takeaway.md";
 ---
 
 <ProjectLayout>
@@ -13,6 +14,9 @@ import Features from "../../../components/projects/stock/features.md";
     </section>
     <section class="max-w-[80ch] text-lg">
         <Features />
+    </section>
+    <section class="max-w-[80ch] text-lg">
+        <Takeaway />
     </section>
 </ProjectLayout>
 
